# skillboxCppHometasks

./: CMakeLists.txt  README.md
HomeTask_11/task_01/: main.cpp
HomeTask_11/task_02/: main.cpp
HomeTask_11/task_03/: main.cpp
HomeTask_11/task_04/: main.cpp
HomeTask_11/task_05/: main.cpp
HomeTask_12/task_01/: main.cpp
HomeTask_12/task_02/: main.cpp
HomeTask_12/task_03/: main.cpp
HomeTask_13/task_01/: main.cpp
HomeTask_13/task_02/: main.cpp
HomeTask_13/task_03/: main.cpp
HomeTask_14/task_01/: main.cpp
HomeTask_14/task_02/: main.cpp
HomeTask_14/task_03/: main.cpp
HomeTask_14/task_04/: main.cpp
HomeTask_14/task_05/: main.cpp
HomeTask_14/task_06/: main.cpp
HomeTask_14/task_07/: main.cpp
HomeTask_14/task_08/: main.cpp
HomeTask_14/task_09/: main.cpp
HomeTask_15/Task_03/: main.cpp
HomeTask_15/task_01/: main.cpp
HomeTask_15/task_02/: main.cpp
HomeTask_15/task_04/: main.cpp
HomeTask_16/task_01/: main.cpp
HomeTask_16/task_02/: main.cpp
HomeTask_16/task_03/: main.cpp
HomeTask_16/task_04/: main.cpp
HomeTask_16/task_05/: main.cpp
HomeTask_17/task_01/: main.cpp
HomeTask_17/task_02/: main.cpp
HomeTask_17/task_03/: main.cpp
HomeTask_18/task_01/: main.cpp
HomeTask_18/task_02/: main.cpp
HomeTask_18/task_03/: main.cpp
HomeTask_18/task_04/: main.cpp
HomeTask_19/task_01/: main.cpp  words.txt
HomeTask_19/task_02/: main.cpp
HomeTask_19/task_03/: main.cpp
HomeTask_19/task_04/: main.cpp
HomeTask_19/task_05/: main.cpp  question1.txt  question10.txt  question11.txt  question12.txt  question13.txt  question2.txt  question3.txt  question4.txt  question5.txt  question6.txt  question7.txt  question8.txt  question9.txt
HomeTask_20/task_01/: main.cpp
HomeTask_20/task_02/: main.cpp
HomeTask_20/task_03/: main.cpp  river.txt
HomeTask_20/task_04/: main.cpp
HomeTask_21/task_01/: main.cpp
HomeTask_21/task_02/: main.cpp
HomeTask_21/task_03/: main.cpp
HomeTask_21/task_04/: CMakeLists.txt  header.h  main.cpp
HomeTask_22/task_01/: main.cpp
HomeTask_22/task_02/: main.cpp
HomeTask_22/task_03/: main.cpp
HomeTask_23/task_01/: main.cpp
HomeTask_23/task_02/: main.cpp
HomeTask_23/task_03/: main.cpp
HomeTask_24/task_01/: main.cpp
HomeTask_24/task_02/: main.cpp
HomeTask_24/task_03/: main.cpp
HomeTask_25/task_01/: CMakeLists.txt
HomeTask_25/task_01/include/: simulation.h
HomeTask_25/task_01/src/: CMakeLists.txt  main.cpp  simulation.cpp
HomeTask_25/task_02/myproj/: CMakeLists.txt
HomeTask_25/task_02/myproj/cpu/: cpu.cpp  cpu.h
HomeTask_25/task_02/myproj/disk/: disk.cpp  disk.h
HomeTask_25/task_02/myproj/gpu/: gpu.cpp  gpu.h
HomeTask_25/task_02/myproj/kbd/: kbd.cpp  kbd.h
HomeTask_25/task_02/myproj/src/: CMakeLists.txt  main.cpp
HomeTask_26/task_01/myproj/: CMakeLists.txt
HomeTask_26/task_02/myproj/: CMakeLists.txt
HomeTask_27/task_01/include/: city.h  mainbranch.h  tree.h
HomeTask_27/task_01/src/: CMakeLists.txt  city.cpp  main.cpp  mainbranch.cpp  tree.cpp
HomeTask_27/task_02.1/: main.cpp
HomeTask_27/task_02/include/: border.h  circle.h  rectangle.h  square.h  triangle.h
HomeTask_27/task_02/src/: CMakeLists.txt  border.cpp  circle.cpp  main.cpp  rectangle.cpp  square.cpp  triangle.cpp
HomeTask_28/Task_01/: main.cpp
HomeTask_28/Task_02/: main.cpp
HomeTask_28/Task_03/: CMakeLists.txt
HomeTask_28/Task_03/src/: CMakeLists.txt  main.cpp
HomeTask_29/task_1/include/: animal.h  cat.h  dog.h
HomeTask_29/task_1/src/: CMakeLists.txt  animal.cpp  cat.cpp  dog.cpp  main.cpp
HomeTask_30/task_1/: CMakeLists.txt
HomeTask_30/task_1/src/: main.cpp
HomeTask_30/task_2/src/: CMakeLists.txt  main.cpp
HomeTask_30/task_3/include/: requests.h
HomeTask_30/task_3/src/: CMakeLists.txt  main.cpp  requests.cpp
HomeTask_31/task_1/: CMakeLists.txt
HomeTask_31/task_1/include/: shared_ptr_toy.h  toy.h
HomeTask_31/task_1/src/: CMakeLists.txt  main.cpp  shared_ptr_toy.cpp  toy.cpp
HomeTask_31/task_2/include/: igraph.h  listgraph.h  matrixgraph.h
HomeTask_31/task_2/src/: CMakeLists.txt  listgraph.cpp  main.cpp  matrixgraph.cpp
HomeTask_32/task_1/src/: main.cpp
HomeTask_32/task_2/: CMakeLists.txt
HomeTask_32/task_2/src/: main.cpp
HomeTask_32/task_3/: readme.txt
HomeTask_32/task_3/src/: file.pb.cc  file.pb.h  file.proto
HomeTask_33/task_1/include/: myexceptions.h
HomeTask_33/task_1/src/: main.cpp
HomeTask_33/task_2/: CMakeLists.txt
HomeTask_33/task_2/include/: myexceptions.h
HomeTask_33/task_2/src/: CMakeLists.txt  main.cpp
HomeTask_33/task_3/include/: register.h
HomeTask_33/task_3/src/: main.cpp
HomeTask_33/task_4/src/: main.cpp
HomeTask_34/task_1/: CMakeLists.txt
HomeTask_34/task_1/src/: CMakeLists.txt  main.cpp
HomeTask_36/: CMakeLists.txt
HomeTask_36/include/: image.h  window.h
HomeTask_36/src/: CMakeLists.txt  image.cpp  main.cpp  window.cpp
HomeTask_37/task_1/include/: form.h
HomeTask_37/task_1/source/: form.cpp  form.ui
HomeTask_37/task_2/: CMakeLists.txt  main.cpp  main.qml
HomeTask_37/task_3/: CMakeLists.txt
HomeTask_37/task_3/include/: form.h
HomeTask_37/task_3/source/: CMakeLists.txt  form.cpp  form.ui  main.cpp
HomeTask_38/task_1/: CMakeLists.txt
HomeTask_38/task_1/src/: CMakeLists.txt  main.cpp
HomeTask_38/task_2/: CMakeLists.txt
HomeTask_38/task_2/include/: form.h
HomeTask_38/task_2/src/: form.cpp  form.ui  main.cpp
HomeTask_38/task_3/: CMakeLists.txt
HomeTask_38/task_3/include/: form.h
HomeTask_38/task_3/src/: CMakeLists.txt  form.cpp  form.ui  main.cpp
HomeTask_39/Task_2/: CMakeLists.txt
HomeTask_39/Task_2/include/: form.h
HomeTask_39/Task_2/sources/: CMakeLists.txt  form.cpp  form.ui
HomeTask_39/task_1/: CMakeLists.txt
HomeTask_39/task_1/src/: CMakeLists.txt  main.cpp  main.qml
include/: converterjson.h  invertedindex.h  searchserver.h
resources/: file002.txt
src/: converterjson.cpp  invertedindex.cpp  main.cpp  searchserver.cpp
task_1/: CMakeLists.txt
task_1/src/: main.cpp
task_2/src/: CMakeLists.txt  main.cpp
task_3/: CMakeLists.txt
task_3/src/: main.cpp
tests/: test-cases.cpp
(+14 files in other folders)
